# rawmaker

./: ..code-workspace  .baw  .dockerignore  .gitignore  BUGS.md  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg  project.config
.github/workflows/: release.yml  test.yml
docs/: backlog.rst  bugs.rst  index.rst  profiling.rst  tests.rst
docs/releases/: 1.10.0.rst  1.11.0.rst  1.12.0.rst  1.13.0.rst  1.14.0.rst  1.15.0.rst  1.16.0.rst  1.17.0.rst  1.18.0.rst  1.19.0.rst  1.20.0.rst  1.23.0.rst  1.6.0.md  1.6.0.rst  1.7.0.rst  1.8.0.rst  1.9.0.rst  backlog.rst  releases.rst
figureo/: __init__.py  cli.py  data.py  extract.py
letty/: __init__.py  cli.py  optimizer.py
letty/quality/: whitespace.py
linero/: __init__.py  __patch__.py  cli.py  cluster.py  lines.py  math.py  path.py  table.py  utils.py
linero/camelot/: fork.py  runtime.py
linero/camelox/: fork.py  runtime.py
linero/features/: figure.py  table.py
linero/table/: __init__.py  camelot.py  camelox.py  crossed.py  horizontal.py  strategy.py  utils.py  word.py
optimize/: linero_.py
pdfinfo/: __init__.py  cli.py  data.py  info.py  meta.py  pages.py  version.py
rawmaker/: __init__.py  __main__.py  __patch__.py  cli.py  cli_automate.py  cli_cleanup.py  date.py  destination.py  error.py  math.py  parameter.py  parser.py  path.py  reader.py  utils.py
rawmaker/cleanup/: cli.py  dump.py  load.py  work.py
rawmaker/cleanup/features/: backup.py  cleanup.py  translate.py
rawmaker/cleanup/translate/: lines.py
rawmaker/command/: __init__.py
rawmaker/complex/: __init__.py  toc.py
rawmaker/converter/: basic.py  figure.py  images.py  math.py
rawmaker/features/: __init__.py  annotation.py  border.py  boxes.py  figures.py  fonts.py  formula.py  horizontals.py  images.py  line.py  outlines.py  position.py  text.py  toc.py
rawmaker/figure/: text.py  utils.py
rawmaker/fonts/: flag.py  parser.py
rawmaker/images/: info.py
rawmaker/miner/: __init__.py  char.py  colorspace.py  converter.py  images.py  mining.py  position.py  rawchar.py  text.py  underline.py
rawmaker/patch/: ltchar.py
rawmaker/text/: chars.py  data.py  superfast.py  wordbox.py
rawmaker/translate/: lines.py
spacestation/: __init__.py  cli.py  path.py  serialize.py  wspace.py
spacestation/features/: chardist.py  worddist.py  wspace.py
tests/: __init__.py  conftest.py  resource.py  test_annotation.py  test_border.py  test_boxes.py  test_cli.py  test_cmdline.py  test_date.py  test_features.py  test_features_images.py  test_horizontals.py  test_layout_extraction.py  test_line.py  test_master.py  test_math.py  test_mining.py  test_mining_fonts.py  test_pdfminer.py  test_position.py  test_pyyaml.py  test_resources.py  test_superfast.py  test_text.py  test_toc.py  test_utils.py
tests/badguy/: test_hardcore.py  test_long_files.py
tests/cleanup/: __init__.py  test_cli.py  test_regression.py  test_translate.py  utils.py
tests/data/increasing_fonts/: example.rtf
tests/examples/: single.py
tests/ext/: test_pdfminer.py
tests/figure/: test_extract.py  test_regression.py  test_render.py  test_textfigures.py
tests/figureo_/: __init__.py  test_cli.py  test_extract.py
tests/fonts/: test_font_flag.py  test_mining.py  test_regression.py  test_rise.py
tests/formula/: test_master110.py  test_master116.py  test_math.py  test_regression.py
tests/images/: test_colorspace.py  test_images.py  test_info.py  test_regression.py  test_validate.py
tests/images/expected/: master105
tests/layout/: test_fine_regression.py  test_mylayout.py  test_text.py  test_toc_oneline.py  test_vertical.py  test_whitespace.py
tests/letty_/: __init__.py  test_cli.py  test_optimizer.py  test_whitespaces.py
tests/linero_/: __init__.py  test_camelot.py  test_cli.py  test_cluster.py  test_figure.py  test_math.py  test_table.py
tests/nighly/: test_extract_all.py
tests/outlines/: test_outlines.py  test_regression.py
tests/pdfinfo_/: __init__.py  test_cli.py  test_data.py  test_info.py  test_meta.py  test_pages.py  test_version.py
tests/rawmaker_automate_/: __init__.py  test_cli.py
tests/resources/: .gitignore  __init__.py  test_math.py  update.py
tests/resources/golden/: update.sh
tests/resources/increasing_fonts/: example.rtf
tests/spacestation_/: __init__.py  test_chardist.py  test_cli.py  test_scaled_font.py  test_worddist.py  test_wspace.py
tests/text/: test_chars.py  test_regression.py  test_rotated.py  test_special_char.py  test_wordbox.py
tests/translate/: test_translate.py
(+13 files in other folders)
