[project]
name = "rawmaker"
version = "2.40.3"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "pdfminer.six>=20260107,<20270000",
    "pillow>=12.2.0,<13.0.0",
    "camelot_py>=1.0.9,<2.0.0",
    "utilo>=2.107.5,<3.0.0",
    "configos>=1.0.4,<2.0.0",
    "iamraw>=4.91.4,<5.0.0",
    "protoerror>=3.20.2,<4.0.0",
    "ughost>=1.0.1,<2.0.0",
    "pdflog>=1.0.2,<2.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "hoverpower>=1.2.0,<2.0.0",
    "jamer>=1.0.2,<2.0.0",
    "utilotest>=1.0.4,<2.0.0",
    "gennex>=1.0.3,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/rawmaker"
Repository = "https://github.com/anaticulae/rawmaker"

[project.scripts]
letty = "letty.cli:main"
rawmaker = "rawmaker.cli:main"
rawmaker_automate = "rawmaker.cli_automate:main"
rawmaker_cleanup = "cleanup.cli:main"
spacestation = "spacestation.cli:main"

[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "fix",
    "perf",
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
    "deps",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "letty",
    "letty.quality",
    "rawmaker",
    "rawmaker.converter",
    "rawmaker.features",
    "rawmaker.fonts",
    "rawmaker.images",
    "rawmaker.miner",
    "rawmaker.patch",
    "rawmaker.text",
    "spacestation",
    "spacestation.features",
]
exclude = [
    "tests*",
]
